THRIFT-882. java: deep copy of binary fields does not copy ByteBuffer characteristics (arrayOffset, position)

This patch ensures that binary fields are copied correctly.



git-svn-id: https://svn.apache.org/repos/asf/incubator/thrift/trunk@998275 13f79535-47bb-0310-9956-ffa450edef68